[tool.poetry]
name = "phone-osint-scraper"
version = "0.1.0"
description = "Production-grade phone OSINT scraper with ClickHouse storage"
authors = ["OSINT Team"]

[[tool.poetry.packages]]
include = "src"

[tool.poetry.dependencies]
python = "^3.11"
clickhouse-connect = "^0.8.18"
pydantic = "^2.12.5"
phonenumbers = "^9.0.25"
aiohttp = "^3.11.2"
beautifulsoup4 = "^4.12.0"
lxml = "^5.0.0"
redis = "^7.2.1"
python-dotenv = "^1.2.2"
click = "^8.1.8"
pandas = "^2.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.2"
pytest-mock = "^3.14.0"

[tool.poetry.scripts]
phone-osint = "cli:process"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"